argo-rollouts/v1.8.4/gateway-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: argo-rollouts-gateway
  namespace: argo-rollouts
spec:
  gatewayClassName: traefik
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    hostname: rollouts.kubecy.com
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-rollouts-https
  namespace: argo-rollouts
spec:
  parentRefs:
  - name: argo-rollouts-gateway
    namespace: argo-rollouts
    sectionName: http
  hostnames:
  - rollouts.kubecy.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: argo-rollouts-dashboard
      port: 3100
